--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -14,13 +14,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: Maven release
+      uses: qcastel/github-actions-maven-release@v1.0.3
       with:
-        java-version: 1.8
-        server-id: ${{secrets.SERVER_ID}} # Value of the distributionManagement/repository/id field of the pom.xml
-        server-username: ${{secrets.SERVER_USERNAME}} # location for the settings.xml file
-        server-password: ${{secrets.SERVER_PASSWORD}}
-        gpg-private-key: ${{secrets.PGP_PRI_KEY}}
-    - name: Build with Maven
-      run: mvn clean deploy
+    # Filter the branch to execute the release on
+       release-branch-name: master # optional
+    # Enable gpg signing
+       gpg-enabled: true # optional
+    # The GPG key ID
+       gpg-key-id: 18700AB8 # optional
+    # The GPG key
+       gpg-key: ${{secrets.PGP_PRI_KEY}} # optional
+    # The maven local repository path
+    # Maven server repository id to push the artefacts to
+       maven-repo-server-id: ${{secrets.SERVER_ID}}
+    # Maven server repository username
+       maven-repo-server-username: ${{secrets.SERVER_USERNAME}}
+    # Maven server repository password
+       maven-repo-server-password: ${{secrets.SERVER_PASSWORD}}
+    # The maven arguments for the release
+       maven-args: mvn clean deploy # optional, default is 
