--- a/spring-boot-redis-starter/pom.xml
+++ b/spring-boot-redis-starter/pom.xml
@@ -68,7 +68,7 @@
     <developers>
         <developer>
             <name>dislazy</name>
-            <email>dislazy2019@outlook.com</email>
+            <email>songbo2021@outlook.com</email>
             <url>https://bosong.online</url>
         </developer>
     </developers>
