change module name and upgrade java version

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -2,17 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <parent>
         <groupId>com.alidaodao.app</groupId>
         <artifactId>redis-helper-all</artifactId>
-        <version>1.0.0</version>
+        <version>${revision}</version>
     </parent>
-
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.alidaodao.app</groupId>
     <artifactId>alidaodao-app-redis-example</artifactId>
     <version>${revision}</version>
 
@@ -41,6 +38,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.4.1</spring-boot.version>
+        <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
 
 
