feat(redis): upgrade redis-client version and fix java version to 1.8

--- a/redis-client/pom.xml
+++ b/redis-client/pom.xml
@@ -22,8 +22,8 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>11</java.version>
-        <jedis-version>3.6.1</jedis-version>
+        <java.version>1.8</java.version>
+        <jedis-version>3.6.3</jedis-version>
         <common-lang3.version>3.12.0</common-lang3.version>
         <skipTests>true</skipTests>
     </properties>
@@ -44,7 +44,7 @@
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
 
