--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>11</java.version>
-        <revision>1.22.0</revision>
+        <java.version>1.8</java.version>
+        <revision>1.23.0</revision>
     </properties>
 
     <modules>
@@ -41,7 +41,7 @@
     <developers>
         <developer>
             <name>dislazy</name>
-            <email>dislazy2019@outlook.com</email>
+            <email>songbo2021@outlook.com</email>
             <url>https://bosong.online</url>
         </developer>
     </developers>
@@ -86,8 +86,8 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <version>3.8.1</version>
                         <configuration>
-                            <source>11</source>
-                            <target>11</target>
+                            <source>1.8</source>
+                            <target>1.8</target>
                         </configuration>
                     </plugin>
                     <plugin>
