--- a/pom.xml
+++ b/pom.xml
@@ -2,41 +2,53 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.alidaodao.app</groupId>
-    <artifactId>redis-helper-all</artifactId>
-    <version>${revision}</version>
-    <packaging>pom</packaging>
+    <artifactId>alidaodao-app-redis</artifactId>
+    <version>2.0.0</version>
 
-    <name>alidaodao-app-redis-all</name>
+    <name>alidaodao-app-redis</name>
     <description>redis connection tool helper</description>
     <url>https://github.com/dislazy/alidaodao-app-redis</url>
 
     <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <revision>1.23.0</revision>
+        <jedis-version>3.6.3</jedis-version>
+        <common-lang3.version>3.12.0</common-lang3.version>
+        <skipTests>true</skipTests>
+        <maven.deploy.skip>false</maven.deploy.skip>
     </properties>
 
-    <modules>
-        <module>redis-client</module>
-        <module>example</module>
-        <module>spring-boot-redis-starter</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${common-lang3.version}</version>
+        </dependency>
+    </dependencies>
 
-
-    <prerequisites>
-        <maven>3.2.5</maven>
-    </prerequisites>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
 
     <scm>
         <connection>scm:git:git://github.com/dislazy/alidaodao-app-redis.git</connection>
         <developerConnection>scm:git:ssh:/github.com/dislazy/alidaodao-app-redis.git</developerConnection>
         <url>https://github.com/dislazy/alidaodao-app-redis/tree/master</url>
     </scm>
-
     <!-- 开发者信息 -->
     <developers>
         <developer>
@@ -45,13 +57,6 @@
             <url>https://bosong.online</url>
         </developer>
     </developers>
-
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
-    </licenses>
 
     <profiles>
         <profile>
@@ -86,8 +91,8 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <version>3.8.1</version>
                         <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
+                            <source>11</source>
+                            <target>11</target>
                         </configuration>
                     </plugin>
                     <plugin>
@@ -145,6 +150,13 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <configuration>
+                            <skip>${maven.deploy.skip}</skip>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
