--- a/.github/workflows/github2gitee.yml
+++ b/.github/workflows/github2gitee.yml
@@ -5,7 +5,7 @@ name: github2gitee
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
+#   push:
   #  branches: [ main ]  注释代表全部分支
 
   # Allows you to run this workflow manually from the Actions tab
